Hello World Im here!

--- a/GitAndGitHub.html
+++ b/GitAndGitHub.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body bgcolor="grey">
-<p>Hello World!</p>
+<p>Hello World I`m here now!</p>
 <script src="GitAndGitHub.JS"></script>
 </body>
 </html>
